@@ -844,9 +844,14 @@ static RDDFUNCS defTable = { defBof,
                              ( DBENTRYP_OII ) defUnSupported,
                              defClearFilter,
                              defClearLocate,
+                             ( DBENTRYP_V ) defUnSupported,
+                             ( DBENTRYP_VPLP ) defUnSupported,
                              defFilterText,
+                             ( DBENTRYP_SI ) defUnSupported,
                              defSetFilter,
                              defSetLocate,
+                             ( DBENTRYP_VP ) defUnSupported,
+                             ( DBENTRYP_VPL ) defUnSupported,
                              defCompile,
                              defError,
                              defEvalBlock,
