@@ -1,3 +1,12 @@
+20000311-23:00 GMT+3 Alexander Kresin
+   * contrib/rdd_ads/ads1.c
+   * include/hbapirdd.h
+   * source/rdd/dbcmd.c
+   * source/rdd/dbf1.c
+   * source/rdd/dbfcdx/dbfcdx1.c
+     * uncommented scope functions in header file and added declarations to 
+       virtual method tables in *.c files
+
 20000311-18:52 GMT+1 Victor Szakats <info@szelvesz.hu>
    - include/hbinkey.h
    - include/hbapimou.h
